--- a/code/dev/parts/dns_zone_records/list.html
+++ b/code/dev/parts/dns_zone_records/list.html
@@ -20,7 +20,7 @@
   </div>
   <div class="modal-body">
     Are you sure you want to update
-    <strong>{{model.zone}}</strong>?
+    <strong>{{model.domain}}</strong>?
   </div>
   <div class="modal-footer">
     <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
