Change ico for DNS Service menu

--- a/code/dev/parts/layout.html
+++ b/code/dev/parts/layout.html
@@ -145,7 +145,7 @@
             <li ui-sref-active-if="{class: 'active-side-menu-item', state: 'index.dnsServices'}", ng-class="{'active-side-menu-item': menuExpanded('index.dnsServices')}">
                 <a class="side-menu-item" , ng-click="goToState('index.dnsServices.dns_zones')">
                   <div class="left-menu-start">
-                    <i class="fa fa-gear"></i>
+                    <i class="glyphicon glyphicon-list-alt"></i>
                   </div>
                   DNS Service
                   <i ng-click="expandMenu('index.dnsServices', $event)" class="pull-right {{ menuExpanded('index.dnsServices') ? 'fa fa-caret-down' : 'fa fa-caret-up' }}"></i>
