--- a/code/dev/parts/dns_zone_records/edit.html
+++ b/code/dev/parts/dns_zone_records/edit.html
@@ -32,6 +32,7 @@
 <div class="row">
   <div class="col-sm-12">
     <h2 class="pull-left page-title">
+      <img class="ns1-logo--title" ng-src="images/ns1/white-pb-ns1.svg"></img>
       Edit Record   <strong>{{ model.domain }}
           <span class="badge">{{ model.type }}</span>
           <span ng-show="record.tier == 1" class="badge badge-1">STATIC</span>
