--- a/code/dev/parts/dns_zones/new.html
+++ b/code/dev/parts/dns_zones/new.html
@@ -1,6 +1,7 @@
 <div class="row">
   <div class="col-sm-12">
     <h2 class="pull-left page-title">
+      <img class="ns1-logo--title" ng-src="images/ns1/white-pb-ns1.svg"></img>
       Add New DNS Zone
     </h2>
   </div>
