Fix 'add new answer' modal window

--- a/code/dev/parts/dns_zone_records/dns-zone-record-answer/dns-zone-record-answer.tpl.html
+++ b/code/dev/parts/dns_zone_records/dns-zone-record-answer/dns-zone-record-answer.tpl.html
@@ -1,4 +1,4 @@
-<div class="dns-zone-record-answer">
+<div class="dns-zone-record-answer" ng-if="!!$ctrl.recordType">
   <div class="form-group" ng-show="$ctrl.recordType=='A'">
     <p>Domain points to</p>
     <p>
