--- a/code/dev/parts/dns_zones/list.html
+++ b/code/dev/parts/dns_zones/list.html
@@ -4,8 +4,8 @@
     <h3 class="modal-title">Confirm</h3>
   </div>
   <div class="modal-body">
-    Are you sure you want to delete
-    <strong>{{model.zone}}</strong> zone and all records in the zone?
+    Are you sure you want to delete zone
+    <strong>{{model.zone}}</strong> and all records in the zone?
   </div>
   <div class="modal-footer">
     <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
@@ -17,7 +17,7 @@
     <h3 class="modal-title">Confirm</h3>
   </div>
   <div class="modal-body">
-    Are you sure you want to update
+    Are you sure you want to update zone
     <strong>{{model.zone}}</strong>?
   </div>
   <div class="modal-footer">
