--- a/code/dev/parts/dns_zone_records/edit.html
+++ b/code/dev/parts/dns_zone_records/edit.html
@@ -22,7 +22,7 @@
     <h3 class="modal-title">Confirm Delete</h3>
   </div>
   <div class="modal-body">
-    <p>Are you sure you want to remove the <b>{{model.record.answers[model.index].answer | mergearray}}</b> answer and all associated metadata and feeds from this record?</p>
+    <p>Are you sure you want to remove the <b>{{model.record.answers[model.index].answer | mergearray}}</b> answer from this record?</p>
   </div>
   <div class="modal-footer">
     <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
@@ -67,7 +67,7 @@
             </div>
           </div>
           <div class="form-group">
-            <label class="control-label col-sm-2" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="If enabled, edns-client-subnet data will be used with compatible filters. edns-client-subnet results in more accurate routing, but increased query counts, so disabling this option will reduce queries at the cost of accuracy">
+            <label class="control-label col-sm-2" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="If enabled, edns-client-subnet data will be used with compatible filters. edns-client-subnet results in more accurate routing, but increased query counts, so disabling this option will reduce queries at the cost of accuracy.">
               Use Client Subnet</label>
             <div class="col-sm-10">
               <toggle-switch is-disabled="_loading" ng-model="record.use_client_subnet" on-label="Yes" off-label="No">
