--- a/code/dev/parts/dns_zone_records/new.html
+++ b/code/dev/parts/dns_zone_records/new.html
@@ -92,8 +92,8 @@
               </div>
             </div>
             <div class="form-group" ng-show="!create_linked">
-              <label class="control-label col-sm-2 " popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="If you&#39;re just creating a simple DNS record, you can set the answer here.  If you&#39;re configuring a record with multiple answers, regions, data feeds, and filter chain, you can leave this out and configure the record after it&#39;s created, or skip straight to advanced config.">
-                Answer</label>
+              <label class="control-label col-sm-2 " popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Set here the value (answer) for the DNS record. If you need to configure more than one answer for the new record you can add them later in Edit form of the record.">
+                Answer *</label>
                 <!-- TODO: replace directive-->
               <ng:include src="'parts/dns_zone_records/answercontrols.html'"></ng:include>
             </div>
