--- a/code/dev/parts/dns_zones/list.html
+++ b/code/dev/parts/dns_zones/list.html
@@ -60,7 +60,7 @@
         </div>
         <div class="panel-body">
           <div class="alert alert-info" ng-if="records.length == 0 && !_loading">
-            Currently you don't have any DNS zones registered in the system. You can click on "Add New DNS Zone" button above to add an DNS Zone.
+            Currently you don't have any DNS zones registered in the system. You can click on "Add New DNS Zone" button above to add a DNS Zone.
           </div>
           <div class="alert alert-info" ng-if="_loading">
             <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>&nbsp; Loading...
