--- a/code/dev/parts/layout.html
+++ b/code/dev/parts/layout.html
@@ -150,17 +150,17 @@
                   DNS Service
                   <i ng-click="expandMenu('index.dnsServices', $event)" class="pull-right {{ menuExpanded('index.dnsServices') ? 'fa fa-caret-down' : 'fa fa-caret-up' }}"></i>
                 </a>
-                <a ui-sref-active="active" ui-sref-active-if="{class: 'active', state: 'index.dnsServices.dns_zone_records'}" ui-sref="index.dnsServices.dns_zones" class="side-menu-sub-item" ng-if="!userService.isUser()">
+                <a ui-sref-active="active" ui-sref-active-if="{class: 'active', state: 'index.dnsServices.dns_zone_records'}" ui-sref="index.dnsServices.dns_zones" class="side-menu-sub-item">
                     <i class="sub-menu-icon fa fa-tasks"></i>
                     DNS Zones
                 </a>
                 <!-- TODO: delete style color: gerey after release module-->
-                <a ui-sref-active="active" style="color:grey" uisref="index.dnsServices.dns_monitors" class="side-menu-sub-item" ng-if="!userService.isUser()">
+                <a ui-sref-active="active" style="color:grey" uisref="index.dnsServices.dns_monitors" class="side-menu-sub-item">
                     <i class="sub-menu-icon fa fa-eye"></i>
                     Monitors <i class="fa fa-hourglass-half comming-soon" aria-hidden="true" popover-append-to-body="{{true}}"  popover-trigger="mouseenter" uib-popover="Coming Soon "></i>
                 </a>
                 <!-- TODO: delete style color: gerey after release module-->
-                <a ui-sref-active="active" style="color:grey" uisref="index.dnsServices.dns_datasources" class="side-menu-sub-item" ng-if="!userService.isUser()">
+                <a ui-sref-active="active" style="color:grey" uisref="index.dnsServices.dns_datasources" class="side-menu-sub-item">
                     <i class="sub-menu-icon fa fa-upload"></i>
                     Data Sources <i class="fa fa-hourglass-half comming-soon" aria-hidden="true" popover-append-to-body="{{true}}"  popover-trigger="mouseenter" uib-popover="Coming Soon "></i>
                 </a>
