--- a/code/dev/parts/dns_zone_records/new.html
+++ b/code/dev/parts/dns_zone_records/new.html
@@ -24,13 +24,15 @@
         <form class="form-horizontal dns-zone-records--new-form" name="createForm">
           <!-- <p>Set up the basics of your record here — you can do additional configuration after creating a basic record.</p> -->
           <div class="form-horizontal">
-            <div class="form-group  form-inline" ng-class="{ 'has-error': createForm.subdomain.$invalid && createForm.subdomain.$dirty }">
+            <div class="form-group  form-inline" ng-class="{ 'has-error': createForm.subdomainFull.$invalid && createForm.subdomain.$dirty }">
               <label for="subdomain" class="control-label col-sm-2 " popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Enter a subdomain within the {{zone_name}} zone.  You may enter &#39;*&#39; as the first component of the subdomain to create a wildcard record.  For example, &#39;*.{{zone_name}}&#39; will match &#39;foo.{{zone_name}}&#39;, &#39;bar.{{zone_name}}&#39;, &#39;foo.bar.{{zone_name}}&#39;, and so on.  You may also leave the subdomain blank to create a record for {{zone_name}}.">
                 Domain </label>
               <div class="col-sm-10">
-                <input type="text" id="subdomain" name="subdomain" autofocus class="form-control" placeholder="my.subdomain" ng-model="model.idomain">
+                <!-- NOTE: all validation rules implement to hidden fild-->
+                <input type="hidden" id="subdomainFull" name="subdomainFull" validate-domain-name-regular-or-wildcard ng-model="newDomainName" ng-maxlength="225" required >
+                <input type="text" id="subdomain" name="subdomain" autofocus class="form-control" placeholder="my.subdomain" ng-model="model.idomain" ng-change="newDomainName = (model.idomain.length>0)? model.idomain+'.'+zone_name:null">
                 <label class="add-on" ng-if="zone_name">.{{zone_name}}</label>
-                <div class="error-messages" ng-messages="createForm.subdomain.$error" role="alert" ng-messages-multiple>
+                <div class="error-messages" ng-messages="createForm.subdomainFull.$error" role="alert" ng-messages-multiple>
                   <div ng-messages-include="parts/shared/error-messages.html"></div>
                 </div>
               </div>
