Create new directive 'alidate-domain-name-regular-or-wildcard-domains'

--- a/code/dev/parts/shared/error-messages.html
+++ b/code/dev/parts/shared/error-messages.html
@@ -29,3 +29,5 @@
 <div ng-message="pattern-no-special-chars" class="alert-text alert-text--no-special-chars">Special characters are not allowed</div>
 <!-- message for validate-wildcard-domain-field  -->
 <div ng-message="domain-name-regular-or-wildcard" class="alert-text alert-text--wildcard-domain-field">Incorrect wildcard or domain name format</div>
+<!-- message for validate-domain-name-regular-or-wildcard-domains  -->
+<div ng-message="domain-name-regular-or-wildcard-domains" class="alert-text alert-text--wildcard-domains-fields">Incorrect wildcard or domain name format</div>
