usage report, monthly traffic graph

--- a/code/dev/parts/reports/usage-web.html
+++ b/code/dev/parts/reports/usage-web.html
@@ -68,6 +68,15 @@
         <div class="panel-body">
 
           <div class="row">
+            <div class="col-md-12">
+              <h4>Monthly Traffic Usage Trend</h4>
+                <div>
+                  <div style="min-width: 500px; min-height: 350px" line-chart ng-data="traffic" ng-chart-options="chartOptions"></div>
+                </div>
+            </div>
+          </div>
+
+          <div class="row">
 
             <div class="col-md-4">
 
