--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -266,6 +266,7 @@ ga('create',  window.gaAccount, 'auto');
 <script type="text/javascript" src="js/portal/domains/domain-staging-status/domainStagingStatus.directive.js"></script>
 <script type="text/javascript" src="js/portal/domains/domain-caching-rule/domainCachingRule.directive.js"></script>
 <script type="text/javascript" src="js/portal/domains/domain-custom-vcl/domainCustomVcl.directive.js"></script>
+<script type="text/javascript" src="js/portal/domains/domain-custom-vcl-backends/domainCustomVclBackends.directive.js"></script>
 <script type="text/javascript" src="js/portal/domains/origin-request-headers/originRequestHeaders.directive.js"></script>
 <script type="text/javascript" src="js/portal/domains/end-user-response-headers/endUserResponseHeaders.directive.js"></script>
 <script type="text/javascript" src="js/portal/domains/controller/domainsCrud.controller.js"></script>
