Add the button 'Click to copy the CNAME..'

--- a/code/dev/parts/domains/list.html
+++ b/code/dev/parts/domains/list.html
@@ -119,7 +119,9 @@
                   {{item.domain_name}}
                 </a>
                 </td>
-                <td>{{item.cname}}</td>
+                <td>
+                  <button class="btn  btn-xs btn-primary" clipboard text="item.cname" on-copied="copyCallback()" on-error="copyCallback(err)" style="vertical-align: initial;" uib-tooltip="Click to copy the CNAME to the clipboard" tooltip-placement="top"><i class="fa fa-files-o"></i></button>
+                  <span title="{{item.cname}}"> {{item.cname}} </span></td>
                 <td>{{ getRelativeDate(item.updated_at) }}</td>
                 <td>
                   <div domain-staging-status ng-id="item.id"></div>
@@ -129,9 +131,6 @@
                   <a ui-sref=".edit({id: item.id})" ng-if="!item.loading" uib-tooltip="Edit Domain">
                     <i class="glyphicon glyphicon-pencil"></i>
                   </a>
-                  <!-- <a ui-sref=".advanced({id: item.id})" ng-if="!item.loading" uib-tooltip="Advanced Edit Domain">
-                    <i class="glyphicon glyphicon-cog"></i>
-                  </a> -->
                   <a ui-sref=".edit({id: item.id,isAdvanced:true})" ng-if="!item.loading" uib-tooltip="Advanced Edit Domain">
                     <i class="glyphicon glyphicon-cog"></i>
                   </a>
