--- a/code/dev/parts/companies/list.html
+++ b/code/dev/parts/companies/list.html
@@ -55,6 +55,9 @@
           <div class="alert alert-info" ng-if="records.length == 0 && !_loading">
             Currently there are not companies registered in the system
           </div>
+          <div class="alert alert-warning" ng-if="records == null && !_loading">
+            Failed to retrieve a list of resources - please try again later
+          </div>
           <div class="alert alert-info" ng-if="_loading">
             <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>&nbsp;
             Loading...
