--- a/code/dev/parts/dns_zones/list.html
+++ b/code/dev/parts/dns_zones/list.html
@@ -25,7 +25,6 @@
     <button class="btn btn-success" type="button" ng-click="ok()">OK</button>
   </div>
 </script>
-
 <div class="container-fluid" ui-view="page">
   <div class="row">
     <div class="col-sm-12">
@@ -62,6 +61,9 @@
           <div class="alert alert-info" ng-if="records.length == 0 && !_loading">
             Currently you don't have any DNS zones registered in the system. You can click on "Add New DNS Zone" button above to add an DNS Zone.
           </div>
+          <div class="alert alert-warning" ng-if="records == null && !_loading">
+            Failed to retrieve a list of resources - please try again later
+          </div>
           <div class="alert alert-info" ng-if="_loading">
             <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>&nbsp; Loading...
           </div>
@@ -75,7 +77,6 @@
                 </th>
                 <th><a href="" ng-click="order('records_count')"># Of Records</a>
                   <span class="sortorder" ng-show="filter.predicate === 'records_count'" ng-class="{reverse: filter.reverse}"></span></th>
-
                 <th>DNS Servers</th>
                 <th>
                   <a href="" ng-click="order('updated_at')">Last Update</a>
@@ -98,7 +99,9 @@
                 </a>
                 </td>
                 <td>{{item.records_count}}</td>
-                <td><div ng-repeat="server in item.dns_servers">{{server}}<span ng-hide="$last">,</span></div></td>
+                <td>
+                  <div ng-repeat="server in item.dns_servers">{{server}}<span ng-hide="$last">,</span></div>
+                </td>
                 <td>{{getRelativeDate(item.updated_at) }}</td>
                 <td>{{item.updated_by}}</td>
                 <td class="actions">
