--- a/code/dev/parts/domains/list.html
+++ b/code/dev/parts/domains/list.html
@@ -85,6 +85,9 @@
           <div class="alert alert-info" ng-if="records.length == 0 && !_loading">
             Currently you don't have any web domains registered in the system. You can click on "Add New Domain" button above to add a domain.
           </div>
+          <div class="alert alert-warning" ng-if="records == null && !_loading">
+            Failed to retrieve a list of resources - please try again later
+          </div>
           <div class="alert alert-info" ng-if="_loading">
             <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>&nbsp; Loading...
           </div>
