--- a/code/dev/parts/logshippers/list.html
+++ b/code/dev/parts/logshippers/list.html
@@ -73,6 +73,9 @@
           <div class="alert alert-info" ng-if="records.length == 0 && !_loading">
             Currently you don't have any log shipping jobs configured in the system. You can click on "Add New Log Shipping Job" button above to configure a new log shipping task.
           </div>
+          <div class="alert alert-warning" ng-if="records == null && !_loading">
+            Failed to retrieve a list of resources - please try again later
+          </div>
           <div class="alert alert-info" ng-if="_loading">
             <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>&nbsp; Loading...
           </div>
