--- a/code/dev/parts/ssl_certs/list.html
+++ b/code/dev/parts/ssl_certs/list.html
@@ -38,7 +38,6 @@
     <button class="btn btn-success" type="button" ng-click="ok()">OK</button>
   </div>
 </script>
-
 <div class="container-fluid" ui-view="page">
   <div class="row">
     <div class="col-sm-12">
@@ -74,6 +73,9 @@
           <div class="alert alert-info" ng-if="records.length == 0 && !_loading">
             Currently you don't have any SSL certificates registered in the system. You can click on "Add New SSL Certificate" button above to add an SSL certificate.
           </div>
+          <div class="alert alert-warning" ng-if="records == null && !_loading">
+            Failed to retrieve a list of resources - please try again later
+          </div>
           <div class="alert alert-info" ng-if="_loading">
             <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>&nbsp; Loading...
           </div>
@@ -85,7 +87,6 @@
                   <a href="" ng-click="order('cert_name')">Certificate Name</a>
                   <span class="sortorder" ng-show="filter.predicate === 'cert_name'" ng-class="{reverse: filter.reverse}"></span>
                 </th>
-
                 <th><a href="" ng-click="order('domains')">Domains</a>
                   <span class="sortorder" ng-show="filter.predicate === 'domains'" ng-class="{reverse: filter.reverse}"></span></th>
                 <th ng-if="auth.isRevadmin()"><a href="" ng-click="order('cert_type')">Cert Type</a>
@@ -96,7 +97,7 @@
                   <a href="" ng-click="order('updated_at')">Last Update</a>
                   <span class="sortorder" ng-show="filter.predicate === 'updated_at'" ng-class="{reverse: filter.reverse}"></span>
                 </th>
-                 <th class="thin">Status</th>
+                <th class="thin">Status</th>
                 <th>Actions</th>
                 <th class="account" ng-if="auth.isReseller() ||  auth.isRevadmin()">
                   <a href="" ng-click="order('companyName')">Account</a>
@@ -116,7 +117,7 @@
                 <td>{{getRelativeDate(item.expires_at)}}</td>
                 <td>{{getRelativeDate(item.updated_at) }}</td>
                 <td>
-                  <div  cert-staging-status ng-id="item.id">ddd</div>
+                  <div cert-staging-status ng-id="item.id">ddd</div>
                 </td>
                 <td class="actions">
                   <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>
